# fdc-roshaan7zafar

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
data/: restaurant_data.xlsx
src/fig_data_challenge/: main.py
src/tests/: test_main.py
